sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	var deb:Int=0;
	var fin:Int=getNombreValeurs()-2;
	var trie:Int=0;
	do{
		for(i<-deb to fin by 1){
			if(plusPetit(i+1, i)){
				echange(i+1,i);
				trie=0;
			}
		}
		fin=fin-1;
		for(i<-din to deb by -1){
			if(plusPetit(i+1, i)){
				echange(i,i+1);
				trie=0;
			}
		}
		deb=deb-1;
		
	}while(trie==0);
}


debut=0; fin=lgr-2
Faire
  Pour tout i dans [debut,fin], faire:
    si i et i+1 doivent être échangées, le faire
  fin -= 1 (cela veut dire fin = fin -1)
  Pour tout i dans [fin, debut] en descendant, faire:
    si i et i+1 doivent être échangées, le faire
  debut += 1 (ce qui veut dire debut = debut + 1)
tant qu'au moins l'un des parcours a inversé un élément